@@ -28,6 +28,7 @@
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/sun.security.provider=ALL-UNNAMED
         </surefire.args>
 
         <maven.dependency.plugin.version>3.8.0</maven.dependency.plugin.version>
@@ -48,6 +49,16 @@
         <muleBomVersion>${mule.version}</muleBomVersion>
         <muleApiVersion>1.9.0-SNAPSHOT</muleApiVersion>
         <httpConnectorVersion>${project.version}</httpConnectorVersion>
+
+        <!-- fips testing -->
+        <bcprov-jdk15on.version>1.58</bcprov-jdk15on.version>
+        <bctls-fips.version>1.0.17</bctls-fips.version>
+        <bcpqc-addon-fips.version>1.0.1</bcpqc-addon-fips.version>
+        <bcpkix-fips.version>1.0.7</bcpkix-fips.version>
+        <bcpg-fips.version>1.0.7.1</bcpg-fips.version>
+        <bcmail-jdk15on.version>1.58</bcmail-jdk15on.version>
+        <bcmail-fips.version>1.0.4</bcmail-fips.version>
+        <bc-fips.version>1.0.2.5</bc-fips.version>
     </properties>
 
     <modules>
@@ -70,6 +81,63 @@
             <groupId>org.mule.runtime</groupId>
             <artifactId>mule-dwb-api</artifactId>
             <version>2.7.2</version>
+        </dependency>
+
+        <!-- fips testing -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bc-fips</artifactId>
+            <version>${bc-fips.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcmail-fips</artifactId>
+            <version>${bcmail-fips.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcmail-jdk15on</artifactId>
+            <version>${bcmail-jdk15on.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpg-fips</artifactId>
+            <version>${bcpg-fips.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-fips</artifactId>
+            <version>${bcpkix-fips.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpqc-addon-fips</artifactId>
+            <version>${bcpqc-addon-fips.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bctls-fips</artifactId>
+            <version>${bctls-fips.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bcprov-jdk15on.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -239,6 +307,61 @@
                     <scope>provided</scope>
                 </dependency>
             </dependencies>
+        </profile>
+        <profile>
+            <id>fips</id>
+            <activation>
+                <!-- Profile for validating fips -->
+                <property>
+                    <name>fips</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration>
+                            <systemProperties>
+                                <property>
+                                    <name>javax.net.ssl.trustStoreType</name>
+                                    <value>bcfks</value>
+                                </property>
+                                <property>
+                                    <name>javax.net.ssl.trustStore</name>
+                                    <value>../cacertsFips</value>
+                                </property>
+                                <property>
+                                    <name>javax.net.ssl.trustStorePassword</name>
+                                    <value>changeit</value>
+                                </property>
+                                <property>
+                                    <name>javax.net.ssl.keyStoreType</name>
+                                    <value>bcfks</value>
+                                </property>
+                                <property>
+                                    <name>aether.checksums.algorithms</name>
+                                    <value>SHA-256,SHA-512</value>
+                                </property>
+                                <property>
+                                    <name>aether.layout.maven2.checksumAlgorithms</name>
+                                    <value>SHA-256,SHA-512</value>
+                                </property>
+                                <property>
+                                    <name>mule.fips.testing</name>
+                                    <value>true</value>
+                                </property>
+                                <property>
+                                    <name>maven.projectVersion</name>
+                                    <value>${mule.version}</value>
+                                </property>
+                            </systemProperties>
+                            <jvm>${fips.java}</jvm>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
